# firmata-rs

./: .gitlab-ci.yml  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
examples/: analog.rs  blink.rs  blinkm_i2c.rs  button.rs  pwm.rs  servo.rs
src/: constants.rs  lib.rs
