[package]
name = "firmata"
version = "0.2.0"
license = "MIT OR Apache-2.0"
authors = ["Tiemen Schuijbroek <t.j.l.schuijbroek@ratio-case.nl>"]
readme = "README.md"
repository = "https://github.com/Tiemen/firmata-rs"
homepage = "https://github.com/Tiemen/firmata-rs"
description = "A Firmata protocol client library."
edition = "2021"

[dev-dependencies]
serialport = "~4"
