[package]
name = "firmata-rs"
version = "0.4.1"
license = "MIT OR Apache-2.0"
authors = ["Tiemen Schuijbroek <t.j.l.schuijbroek@ratio-case.nl>"]
readme = "README.md"
repository = "https://gitlab.com/Tiemen/firmata-rs"
homepage = "https://gitlab.com/Tiemen/firmata-rs"
description = "A Firmata protocol client library."
edition = "2021"

[dependencies]
backoff = "~0.4"
snafu = "~0.7"
tracing = "0.1"

[dev-dependencies]
serialport = "~4"
tracing-subscriber = "~0.3"
